<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainlayout_popup"
    android:background="@drawable/layout_design"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:padding="10dp"
            android:text="@string/app_name"
            android:fontFamily="@font/calibrib"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/cancelorder_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/businessHour"
            android:fontFamily="@font/calibri"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_design"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:fontFamily="@font/calibrib"
            />
    </LinearLayout>

</LinearLayout>