<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Registration"
    android:orientation="vertical">

    <include layout="@layout/app_bar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">



            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/fullname"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="text"
                android:background="@drawable/roundededittext"
                android:paddingLeft="15dp"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:fontFamily="@font/calibri"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

            <!--  <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    app:ccp_textSize="14sp"
                    />-->

                <EditText
                    android:id="@+id/mob"
                    android:layout_weight="1.0"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:hint="@string/mob"
                    android:textCursorDrawable="@drawable/cursor"
                    android:inputType="number"
                    android:background="@drawable/roundededittext"
                    android:paddingLeft="15dp"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/calibri"/>
            </LinearLayout>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="textEmailAddress"
                android:background="@drawable/roundededittext"
                android:paddingLeft="15dp"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:fontFamily="@font/calibri"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/grey"
                app:hintEnabled="false"
                android:visibility="gone">

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/pwd"
                    android:textCursorDrawable="@drawable/cursor"
                    android:inputType="textPassword"
                    android:background="@drawable/roundededittext"
                    android:paddingLeft="15dp"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/calibri"
                    android:visibility="gone"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/grey"
                app:hintEnabled="false"
                android:visibility="gone">

                <EditText
                    android:id="@+id/repwd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/repwd"
                    android:textCursorDrawable="@drawable/cursor"
                    android:inputType="textPassword"
                    android:background="@drawable/roundededittext"
                    android:paddingLeft="15dp"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/calibri"
                    android:visibility="gone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/refcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/refcode"
                android:textCursorDrawable="@drawable/cursor"
                android:background="@drawable/roundededittext"
                android:paddingLeft="15dp"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:fontFamily="@font/calibri"
                android:visibility="gone"/>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_design"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:fontFamily="@font/calibrib"
                />
            <TextView
                android:id="@+id/alreadyaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already have an account"
                android:gravity="center"
                android:padding="20sp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/calibri"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>